refactoring / add options / change wording

--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -5,7 +5,7 @@
 
 In der schnelllebigen Welt des Onlinehandels ist es entscheidend, stets den Überblick über die Zahlen und Daten deines Online-Business zu behalten. Damit du als Onlinehändler:in immer auf die aktuellen Kennzahlen deines Unternehmens zugreifen kannst und somit direkt siehst, wo Handlungsbedarf besteht, bietet plentymarkets dir das neue Dashboard. Hier kannst du zahlreiche Kennzahlen, Statistiken, Diagrammtypen und Formatierungen miteinander kombinieren. So richtest du dir flexibel und individuell genau das Dashboard ein, das du brauchst.
 
-Besonders bei der Einrichtung deiner ersten Dashboard-Ansicht gibt es einige Punkte zu beachten. Achte besonders auf die vorbereitenden Einstellungen und befolge sorgfältig die Anleitungen in den folgenden Abschnitten:
+Besonders bei der Einrichtung deiner ersten Dashboard-Ansicht gibt es einige Punkte zu beachten. Nim zuerst die vorbereitenden Einstellungen vor und befolge sorgfältig die Anleitungen in den folgenden Abschnitten:
 
 ** <<#200, Kennzahlen anlegen>>
 ** <<#300, Berechtigungen vergeben>>
@@ -44,7 +44,7 @@ Kennzahlen im Einrichtungsmenü anlegen::
 +
 --
 
-Diese Vorgehensweise bietet sich an, wenn du viele verschiedene Kennzahlen auf einmal anlegen möchtest. <<table-create-key-figures>> enthält eine Auflistung der verfügbaren <<#option-keyfigure, Kennzahlen>>. Klicke auf den jeweiligen Link, um detaillierte Informationen zur Einrichtung der Kennzahl und den verfügbaren Einstellungen zu erhalten.
+Diese Vorgehensweise bietet sich an, wenn du viele verschiedene Kennzahlen auf einmal anlegen möchtest. <<table-create-key-figures>> enthält eine Auflistung der verfügbaren xref:business-entscheidungen:myview-dashboard.adoc#intable-keyfigure[Kennzahlen]. Klicke auf den jeweiligen Link, um detaillierte Informationen zur Einrichtung der Kennzahl und den verfügbaren Einstellungen zu erhalten.
 
 [.instruction]
 Kennzahlen im Einrichtungsmenü anlegen:
@@ -62,7 +62,7 @@ Kennzahlen im Einrichtungsmenü anlegen:
 | *Name*
 | Gib einen Namen für die Kennzahl an.
 
-| [#option-keyfigure]*Kennzahl*
+| [#intable-keyfigure]*Kennzahl*
 | Wähle die Kennzahl, die du anlegen möchtest. Eine Liste mit verfügbaren Kennzahlen findest du auf der Handbuchseite xref:business-entscheidungen:kennzahlen.adoc#[Kennzahlen].
 
 | *ID*
@@ -82,7 +82,7 @@ Kennzahlen im Einrichtungsmenü anlegen:
 
 2+^| Bereich *Zielwerte*
 
-| [#option-targetvalue]*für Tage und Wochen*, *für Monate*, *für Quartale*, *für Jahre*
+| [#intable-targetvalue]*für Tage und Wochen*, *für Monate*, *für Quartale*, *für Jahre*
 | Trage Zielwerte ein, die von der Kennzahl erreicht werden sollen. Je nach gewünschtem Zeitraum kannst du hier flexibel die Zielwerte eintragen, die du für die Kennzahl planst.
 
 |======
@@ -111,7 +111,7 @@ Kennzahlen im Dashboard anlegen:
 . Nimm die Einstellungen wie in <<table-create-key-figures>> beschrieben vor.
 . Klicke auf *Speichern* (icon:save[set=plenty]).
 
-IMPORTANT: Beim Anlegen neuer Kennzahlen über das Dashboard ist es nicht möglich, <<#option-targetvalue, Zielwerte>> für diese Kennzahlen einzugeben. Diese Einstellungen kannst du jedoch im Nachhinein im Menü *Einrichtung » plentyBI » Kennzahlen* für die entsprechende Kennzahl ergänzen.
+IMPORTANT: Beim Anlegen neuer Kennzahlen über das Dashboard ist es nicht möglich, xref:business-entscheidungen:myview-dashboard.adoc#intable-targetvalue[Zielwerte] für diese Kennzahlen einzugeben. Diese Einstellungen kannst du jedoch im Nachhinein im Menü *Einrichtung » plentyBI » Kennzahlen* für die entsprechende Kennzahl ergänzen.
 --
 ====
 
@@ -351,13 +351,13 @@ include::partial$neues-dashboard-element.adoc[]
 *_Beispiel:_* Wenn du den aktuellen Monat als *Zeitraum* gewählt hast und für das *Zeitintervall* die Option *Woche*, wird nur der Wert für die aktuelle Woche auf der Kachel angezeigt.
 
 | *Hauptwert*
-| Der Hauptwert wird auf der Kachel etwas größer als der *Sekundärwert* dargestellt. Hier kannst du das reine *Ergebnis der Kennzahl* oder die *Differenz* zum in der Kennzahl <<#option-targetvalue, festgelegten Zielwert>> anzeigen lassen. Die Differenz kannst du als absoluten Wert oder *in %* anzeigen lassen. Über (icon:settings[set=material]) kannst du bestimmen, wie viele Nachkommastellen für den Wert angezeigt werden sollen.
+| Der Hauptwert wird auf der Kachel etwas größer als der *Sekundärwert* dargestellt. Hier kannst du das reine *Ergebnis der Kennzahl* oder die *Differenz* zum in der Kennzahl festgelegten xref:business-entscheidungen:myview-dashboard.adoc#intable-targetvalue[Zielwert] anzeigen lassen. Die Differenz kannst du als absoluten Wert oder *in %* anzeigen lassen. Über (icon:settings[set=material]) kannst du bestimmen, wie viele Nachkommastellen für den Wert angezeigt werden sollen.
 
 | *Sekundärwert*
 | Dieser Wert wird auf der Kachel etwas kleiner und oberhalb des Hauptwerts angezeigt. Für den Sekundärwert stehen dir dieselben Einstellungsmöglichkeiten wie für den *Hauptwert* zur Verfügung. Wähle die Option *Keine*, wenn du keinen Sekundärwert auf der Kachel anzeigen möchtest.
 
 | *Ziel*
-| Soll der in der Kennzahl <<#option-targetvalue, festgelegte Zielwert>> auf der Kachel angezeigt werden? Wähle zwischen den Optionen *Anzeigen* und *Nicht anzeigen*.
+| Soll der in der Kennzahl festgelegte xref:business-entscheidungen:myview-dashboard.adoc#intable-targetvalue[Zielwert] auf der Kachel angezeigt werden? Wähle zwischen den Optionen *Anzeigen* und *Nicht anzeigen*.
 
 | *Einheit*
 | Wähle, ob die Einheit der Kennzahl auf der Kachel angezeigt werden soll.
@@ -373,11 +373,12 @@ a| Möchtest du die Kachel in einer bestimmten Farbe anzeigen? Wähle dazu die O
 *_Tipp:_* Klicke auf (icon:plus[role="green"]), um weitere Bedingungen für die Einfärbung zu speichern.
 
 | *Individuelle Shortcuts*
-| Mit dieser Einstellung kannst du eine individuell konfigurierte Option zum Menü *Aktionen* (icon:ellipsis-h[rotate=90]) auf der Kachel hinzufügen. Du kannst auch bestimmen, unter welchen Voraussetzungen diese Option angezeigt wird und was geschieht, wenn Nutzer:innen darauf klicken. +
+| Mit dieser Einstellung kannst du eine individuell konfigurierte Option zum Menü *Aktionen* (icon:more_vert[set=material]) auf der Kachel hinzufügen. Du kannst auch bestimmen, unter welchen Voraussetzungen diese Option angezeigt wird und was geschieht, wenn Nutzer:innen darauf klicken. +
 Klicke auf (icon:icon-settings[role=darkGrey]), um einen oder mehrere Shortcuts hinzuzufügen.
 
-| *Link zu detaillierter Dashboard-Ansicht*
-| Wähle, welche bereits angelegte Dashboard-Ansicht geöffnet werden soll, wenn du an der Kachel auf *Aktionen* (icon:ellipsis-h[rotate=90]) klickst und die Option *Details zur Kachel* klickst. Wählst du die Option *Keine*, wird beim Klick auf *Details zur Kachel* eine vom System vorgegebene Standard-Ansicht geöffnet. Diese enthält weitere Details zum Ergebnis und den Daten der Kennzahl, die als Grundlage für die Kachel gewählt wurde.
+| [#intable-tile-details]*Link zu detaillierter Dashboard-Ansicht*
+| Wähle, welche bereits angelegte Dashboard-Ansicht geöffnet werden soll, wenn du an der Kachel auf *Aktionen* (icon:more_vert[set=material]) klickst und die Option *Details zur Kachel* auswählst. +
+Wählst du die Option *Keine*, wird beim Klick auf *Details zur Kachel* eine vom System vorgegebene Standard-Ansicht geöffnet. Diese enthält weitere Details zum Ergebnis und den Daten der Kennzahl, die als Grundlage für die Kachel gewählt wurde.
 
 | *Parameter für Detailansicht*
 | Hast du bei der Einstellung *Link zu detaillierter Dashboard-Ansicht* eine bereits existierende Dashboard-Ansicht ausgewählt? Dann kannst du hier festlegen, nach welchen Kriterien diese Ansicht eingegrenzt wird. Klicke auf *Parameter-Konfiguration* (icon:settings[set=material]), um eine oder mehrere Kriterien festzulegen. Je nach der Kennzahl, die auf der Kachel dargestellt wird, stehen die Parameter *Lieferland*, *Benutzer* oder *Nachrichten-Tag* zur Verfügung.
@@ -385,8 +386,6 @@ Klicke auf (icon:icon-settings[role=darkGrey]), um einen oder mehrere Shortcuts 
 |====
 
 --
-
-
 
 [#520]
 ==== Daten aus Kacheln einsehen oder exportieren
@@ -397,8 +396,8 @@ Möchtest du auf Kacheln dargestellte Daten genauer einsehen oder exportieren? D
 Daten aus Kacheln einsehen oder exportieren:
 
 . Bewege den Mauszeiger über die Kachel, deren Daten du einsehen oder exportieren möchtest.
-. Klicke auf *Aktionen* (icon:ellipsis-h[rotate=90]). +
-→ Weitere Optionen werden angezeigt. Beachte die Informationen in <<table-tile-data>>.
+. Klicke auf *Aktionen* (icon:more_vert[set=material]). +
+→ Das Kontextmenü wird geöffnet. Beachte die Informationen in <<table-tile-data>>.
 
 [[table-tile-data]]
 [width="100%"]
@@ -406,12 +405,15 @@ Daten aus Kacheln einsehen oder exportieren:
 |====
 |Einstellung |Erläuterung
 
+| *Details zur Kachel*
+| Je nach der Einstellung, die du für die Option xref:business-entscheidungen:myview-dashboard.adoc#intable-tile-details[Link zu detaillierter Dashboard-Ansicht] vorgenommen hast, öffnet sich hier entweder eine vom System vorgegebene Standardansicht oder die von dir festgelegte Dashboard-Ansicht.
+
 | *Rohdaten*
 | Diese Option zeigt die Kennzahlkonfiguration(en) an, auf denen die Kachel basiert. Klicke auf den Namen, um in eine weitere Ansicht zu gelangen, die die aktuellen Ergebnisse der Rohdaten im Detail enthält.
 
 | *In Google Tabellen exportieren*
 | Nutze diese Option, um die Daten der Kachel in eine Google Tabelle zu exportieren. +
-*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über einen Google Account verfügen und im Google Tabellen-Tool bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
+*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
 *_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
 
 |====
@@ -461,13 +463,13 @@ Einstellungen für Zeilen vornehmen:
 *_Beispiel:_* Wenn du den aktuellen Monat als *Zeitraum* gewählt hast und für das *Zeitintervall* die Option *Woche*, wird nur der Wert für die aktuelle Woche in der Zeile angezeigt.
 
 | *Hauptwert*
-| Der Hauptwert wird auf der Kachel etwas größer als der *Sekundärwert* dargestellt. Hier kannst du das reine *Ergebnis der Kennzahl* oder die *Differenz* zum in der Kennzahl <<#option-targetvalue, festgelegten Zielwert>> anzeigen lassen. Die Differenz kannst du als absoluten Wert oder *in %* anzeigen lassen. Über (icon:settings[set=material]) kannst du bestimmen, wie viele Nachkommastellen für den Wert angezeigt werden sollen.
+| Der Hauptwert wird auf der Kachel etwas größer als der *Sekundärwert* dargestellt. Hier kannst du das reine *Ergebnis der Kennzahl* oder die *Differenz* zum in der Kennzahl festgelegten xref:business-entscheidungen:myview-dashboard.adoc#intable-targetvalue[Zielwert] anzeigen lassen. Die Differenz kannst du als absoluten Wert oder *in %* anzeigen lassen. Über (icon:settings[set=material]) kannst du bestimmen, wie viele Nachkommastellen für den Wert angezeigt werden sollen.
 
 | *Sekundärwert*
 | Dieser Wert wird auf der Kachel etwas kleiner und oberhalb des Hauptwerts angezeigt. Für den Sekundärwert stehen dir dieselben Einstellungsmöglichkeiten wie für den *Hauptwert* zur Verfügung. Wähle die Option *Keine*, wenn du keinen Sekundärwert auf der Kachel anzeigen möchtest.
 
 | *Ziel*
-| Soll der in der Kennzahl <<#option-targetvalue, festgelegte Zielwert>> in der Zeile angezeigt werden? Wähle zwischen den Optionen *Anzeigen* und *Nicht anzeigen*.
+| Soll der in der Kennzahl festgelegte xref:business-entscheidungen:myview-dashboard.adoc#intable-targetvalue[Zielwert] in der Zeile angezeigt werden? Wähle zwischen den Optionen *Anzeigen* und *Nicht anzeigen*.
 
 | *Einheit*
 | Wähle, ob die Einheit der Kennzahl in der Zeile angezeigt werden soll.
@@ -483,11 +485,12 @@ Einstellungen für Zeilen vornehmen:
 *_Tipp:_* Klicke auf (icon:plus[role="green"]), um weitere Bedingungen für die Einfärbung zu speichern.
 
 | *Individuelle Shortcuts*
-| Mit dieser Einstellung kannst du eine individuell konfigurierte Option zum Menü *Aktionen* (icon:ellipsis-h[rotate=90]) an der Zeile hinzufügen. Du kannst auch bestimmen, unter welchen Voraussetzungen diese Option angezeigt wird und was geschieht, wenn Nutzer:innen darauf klicken. +
+| Mit dieser Einstellung kannst du eine individuell konfigurierte Option zum Menü *Aktionen* (icon:more_vert[set=material]) an der Zeile hinzufügen. Du kannst auch bestimmen, unter welchen Voraussetzungen diese Option angezeigt wird und was geschieht, wenn Nutzer:innen darauf klicken. +
 Klicke auf (icon:icon-settings[role=darkGrey]), um einen oder mehrere Shortcuts hinzuzufügen.
 
-| *Link zu detaillierter Dashboard-Ansicht*
-| Wähle, welche bereits angelegte Dashboard-Ansicht geöffnet werden soll, wenn du am rechten Rand der Zeile auf *Aktionen* (icon:ellipsis-h[rotate=90]) klickst und die Option *Details zur Zeile* klickst. Wählst du die Option *Keine*, wird beim Klick auf *Details zur Zeile* eine vom System vorgegebene Standard-Ansicht geöffnet. Diese enthält weitere Details zum Ergebnis und den Daten der Kennzahl, die als Grundlage für die Zeile gewählt wurde.
+| [#intable-row-details]*Link zu detaillierter Dashboard-Ansicht*
+| Wähle, welche bereits angelegte Dashboard-Ansicht geöffnet werden soll, wenn du am rechten Rand der Zeile auf *Aktionen* (icon:more_vert[set=material]) klickst und die Option *Details zur Zeile* wählst. +
+Wählst du die Option *Keine*, wird beim Klick auf *Details zur Zeile* eine vom System vorgegebene Standard-Ansicht geöffnet. Diese enthält weitere Details zum Ergebnis und den Daten der Kennzahl, die als Grundlage für die Zeile gewählt wurde.
 
 | *Parameter für Detailansicht*
 | Hast du bei der Einstellung *Link zu detaillierter Dashboard-Ansicht* eine bereits existierende Dashboard-Ansicht ausgewählt? Dann kannst du hier festlegen, nach welchen Kriterien diese Ansicht eingegrenzt wird. Klicke auf *Parameter-Konfiguration* (icon:settings[set=material]), um eine oder mehrere Kriterien festzulegen. Je nach der Kennzahl, die auf der Zeile dargestellt wird, stehen die Parameter *Lieferland*, *Benutzer* oder *Nachrichten-Tag* zur Verfügung.
@@ -497,16 +500,16 @@ Klicke auf (icon:icon-settings[role=darkGrey]), um einen oder mehrere Shortcuts 
 --
 
 [#805]
-==== Daten aus Zeilen einsehen oder exportieren
+==== Daten aus Zeilen einsehen
 
-Möchtest du auf Zeilen dargestellte Daten genauer einsehen oder exportieren? Dann gehe wie unten beschrieben vor.
+Gehe wie unten beschrieben vor, um Daten aus Zeilen genauer einzusehen.
 
 [.instruction]
-Daten aus Zeilen einsehen oder exportieren:
+Daten aus Zeilen einsehen:
 
 . Bewege den Mauszeiger über die Zeile, deren Daten du einsehen oder exportieren möchtest.
-. Klicke auf *Aktionen* (icon:ellipsis-h[rotate=90]). +
-→ Weitere Optionen werden angezeigt. Beachte die Informationen in <<table-row-data>>.
+. Klicke auf *Aktionen* (icon:more_vert[set=material]). +
+→ Das Kontextmenü wird geöffnet. Beachte die Informationen in <<table-row-data>>.
 
 [[table-row-data]]
 [width="100%"]
@@ -514,13 +517,11 @@ Daten aus Zeilen einsehen oder exportieren:
 |====
 |Einstellung |Erläuterung
 
+| *Details zur Zeile*
+| Je nach der Einstellung, die du für die Option xref:business-entscheidungen:myview-dashboard.adoc#intable-row-details[Link zu detaillierter Dashboard-Ansicht] vorgenommen hast, öffnet sich hier entweder eine vom System vorgegebene Standardansicht oder die von dir festgelegte Dashboard-Ansicht.
+
 | *Rohdaten*
 | Diese Option zeigt die Kennzahlkonfiguration(en) an, auf denen die Zeile basiert. Klicke auf den Namen, um in eine weitere Ansicht zu gelangen, die die aktuellen Ergebnisse der Rohdaten im Detail enthält.
-
-| *In Google Tabellen exportieren*
-| Nutze diese Option, um die Daten der Zeile in eine Google Tabelle zu exportieren. +
-*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über einen Google Account verfügen und im Google Tabellen-Tool bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
-*_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
 
 |====
 
@@ -653,6 +654,33 @@ Einstellungen für kombinierte Tabellen vornehmen:
 |====
 
 --
+
+[#660]
+=== Daten aus Tabellen einsehen und exportieren
+
+Nachdem du <<#600, Tabellen>> und <<#650, kombinierte Tabellen>> auf dem Dashboard platziert hast, stehen dir weitere Optionen zur Verfügung, um die dargestellten Daten genauer einzusehen und bei bei Bedarf zu exportieren.
+
+[.instruction]
+Daten aus Tabellen einsehen und exportieren:
+
+. Klicke an der rechten oberen Ecke der Tabelle auf (icon:more_vert[set=material]). +
+→ Das Kontextmenü wird geöffnet.
+. Wähle aus, welche Aktion du für die Tabelle ausführen möchtest. Die folgende Tabelle erläutert die verfügbaren Optionen.
+
+[[table-table-data]]
+[width="100%"]
+[cols="1,3"]
+|====
+|Option |Erläuterung
+
+| *Rohdaten*
+| Diese Option zeigt die Kennzahlkonfiguration(en) an, auf denen die Tabelle basiert. Klicke auf den Namen, um in eine weitere Ansicht zu gelangen, die die aktuellen Ergebnisse der Rohdaten im Detail enthält.
+
+| *In Google Tabellen exportieren*
+| Über diese Option kannst du die Daten der Tabelle in eine Google Tabelle übertragen. +
+*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
+*_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
+|====
 
 [#700]
 === Diagramme verwenden
@@ -1015,7 +1043,7 @@ Einstellungen für Tacho-Diagramme vornehmen:
 | Bei Tacho-Diagrammen ist der Hauptwert an sich nicht veränderbar. Er besteht immer aus dem Ergebnis der Kennzahl, die du für die Darstellung im Tacho-Diagramm ausgewählt hast. Über (icon:settings[set=material]) kannst du bestimmen, wie viele Nachkommastellen für den Wert angezeigt werden sollen.
 
 | *Ziel*
-| Soll der in der Kennzahl <<#option-targetvalue, festgelegte Zielwert>> im Diagramm angezeigt werden? Wähle zwischen den Optionen *Anzeigen* und *Nicht anzeigen*.
+| Soll der in der Kennzahl festgelegte xref:business-entscheidungen:myview-dashboard.adoc#intable-targetvalue[Zielwert] im Diagramm angezeigt werden? Wähle zwischen den Optionen *Anzeigen* und *Nicht anzeigen*.
 
 |====
 
@@ -1126,19 +1154,15 @@ Einstellungen für Baumdiagramme vornehmen:
 --
 
 [#750]
-==== Daten zu Diagrammen einsehen und exportieren
+==== Daten aus Diagrammen einsehen und exportieren
 
 Sobald du Diagramme auf deinem Dashboard platziert hast, stehen dir automatisch zusätzliche Funktionen zur Verfügung. Diese zusätzlichen Funktionen sind für jeden Diagrammtyp identisch und ermöglichen dir, detaillierte Informationen zur Datenbasis einzusehen oder Daten herunterzuladen.
 
-[.collapseBox]
-.*Daten zu Diagrammen einsehen und exportieren*
---
-
 [.instruction]
-Daten zu Diagrammen einsehen und exportieren:
+Daten aus Diagrammen einsehen und exportieren:
 
-. Klicke an der rechten oberen Ecke des Diagramms auf (icon:ellipsis-h[rotate=90]). +
-→ Eine Liste verfügbarer Optionen wird angezeigt.
+. Klicke an der rechten oberen Ecke des Diagramms auf (icon:more_vert[set=material]). +
+→ Das Kontextmenü wird geöffnet.
 . Wähle aus, welche Aktion du für das Diagramm ausführen möchtest. Die folgende Tabelle erläutert die verfügbaren Optionen.
 
 [[table-options-graphs]]
@@ -1159,15 +1183,13 @@ Daten zu Diagrammen einsehen und exportieren:
 | *Daten speichern*
 | Lädt die aktuell angezeigten Daten des Diagramms herunter. Wähle aus den Optionen *CSV* und *JSON*, um das Dateiformat festzulegen. +
 Über die Option *In Google Tabellen exportieren* kannst du die Daten des Diagramms in eine Google Tabelle übertragen. +
-*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über einen Google Account verfügen und im Google Tabellen-Tool bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
+*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
 *_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
 
 | *Filter ändern*
 | Erlaubt dir, die beim Erstellen des Diagramms gewählten Kennzahlen, Zeiträume und Dimensionen schnell und unkompliziert zu ändern. Somit kannst du die Datenbasis eines Diagramms beeinflussen und dir aktuelle Daten aufbereiten, wenn du beispielsweise sehr kurzfristig weitere Informationen benötigst.
 
 |====
-
---
 
 [#810]
 === Weitere Informationen in Bereichen darstellen
