--- a/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
+++ b/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
@@ -242,7 +242,7 @@ Die folgenden Unterkapitel beschreiben, wie du Eigenschaften <<#eigenschaften-er
 [#eigenschaften-erstellen]
 === Neue Eigenschaften erstellen
 
-Eigenschaften erstellst du im Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration*. <<#970, Verknüpfe>> die Eigenschaft anschließend mit dem Kontakt. Gehe wie im Folgenden beschrieben vor, um eine Eigenschaft zu erstellen.
+Eigenschaften erstellst du im Menü *Einrichtung » Einstellungen » Eigenschaften » Konfiguration*. <<#eigenschaften-verknuepfen, Verknüpfe>> die Eigenschaft anschließend mit dem Kontakt. Gehe wie im Folgenden beschrieben vor, um eine Eigenschaft zu erstellen.
 
 :crm:
 include::_includes:page$neue-eigenschaften-erstellen.adoc[]
