--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -22,7 +22,7 @@ Bevor du deine individuelle Dashboard-Ansicht einrichten kannst, sind nur ein pa
 [IMPORTANT]
 .Kennzahlen je nach plentyBI Edition verfügbar
 ====
-Manche Kennzahlen können nur angelegt werden, wenn du zuvor eine bestimmte plentyBI Edition gebucht hast. Öffne dazu das Menü *plentymarkets Logo (Start) » Mein Konto » Verträge*. Im Bereich *plentyBI Edition buchen* stehen dir plentyBI Editionen mit verschiedenen Umfängen zur Auswahl. Zusätzlich wird auch beim Anlegen einer neuen Kennzahl im Menü *Einrichtung » plentyBI » Kennzahlen* pro Kennzahl angezeigt, in welcher plentyBI Edition sie enthalten ist.
+Manche Kennzahlen können nur angelegt werden, wenn du zuvor eine bestimmte plentyBI Edition gebucht hast. Öffne dazu das Menü *plentymarkets Logo (Start) » Mein Konto » Verträge*. Klicke auf *Vertrag bearbeiten* und gehe zum Schritt *plentyBI Edition wählen*. Hier stehen dir plentyBI Editionen mit verschiedenen Umfängen zur Auswahl. Zusätzlich wird auch beim Anlegen einer neuen Kennzahl im Menü *Einrichtung » plentyBI » Kennzahlen* pro Kennzahl angezeigt, in welcher plentyBI Edition sie enthalten ist.
 ====
 
 Damit Daten im Dashboard angezeigt werden können, musst du zuerst entsprechende Kennzahlen anlegen.
