fix: update repair faq

--- a/docs/de-de/modules/plugins/pages/faq-plugins.adoc
+++ b/docs/de-de/modules/plugins/pages/faq-plugins.adoc
@@ -51,7 +51,7 @@ Das Plugin soll meinem Backend neue Menüpunkte hinzufügen. Warum werden diese 
     Prüfe, dass das Plugin-Set, in dem du das Plugin installiert hast, auch als xref:plugins:hinzugefuegte-plugins-installieren.adoc#backend-plugin-set[Backend-Plugin-Set] mit deinem Benutzerkonto verknüpft ist.
 
 Ich habe alle bisher genannten Punkte geprüft, das Plugin funktioniert aber immer noch nicht richtig. Gibt es noch etwas, das ich tun kann?::
-    Eventuell wurde das Plugin nicht vollständig installiert. Du kannst die Installation erneut durchführen, indem du das Plugin reparierst. Öffne hierfür in der Plugin-Übersicht die Detailansicht des Plugins, klicke auf die Schaltfläche *Reparieren* und bestätige die Abfrage. +
+    Eventuell wurde das Plugin nicht vollständig installiert. Du kannst die Installation erneut durchführen, indem du das Plugin reparierst. Öffne dazu das Plugin-Set. Klicke dann in der Zeile des Plugins, das du löschen möchtest, auf weitere Aktionen (icon:more_vert[set=material]). Klicke auf icon:construction[set=material] *Reparieren* und bestätige die Abfrage. +
     Alle deine Einstellungen bleiben beim Reparieren erhalten.
 
 [#login]
