--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -5,7 +5,7 @@
 
 In der schnelllebigen Welt des Onlinehandels ist es entscheidend, stets den Überblick über die Zahlen und Daten deines Online-Business zu behalten. Damit du als Onlinehändler:in immer auf die aktuellen Kennzahlen deines Unternehmens zugreifen kannst und somit direkt siehst, wo Handlungsbedarf besteht, bietet plentymarkets dir das neue Dashboard. Hier kannst du zahlreiche Kennzahlen, Statistiken, Diagrammtypen und Formatierungen miteinander kombinieren. So richtest du dir flexibel und individuell genau das Dashboard ein, das du brauchst.
 
-Besonders bei der Einrichtung deiner ersten Dashboard-Ansicht gibt es einige Punkte zu beachten. Nim zuerst die vorbereitenden Einstellungen vor und befolge sorgfältig die Anleitungen in den folgenden Abschnitten:
+Besonders bei der Einrichtung deiner ersten Dashboard-Ansicht gibt es einige Punkte zu beachten. Nimm zuerst die vorbereitenden Einstellungen vor und befolge sorgfältig die Anleitungen in den folgenden Abschnitten:
 
 ** <<#200, Kennzahlen anlegen>>
 ** <<#300, Berechtigungen vergeben>>
@@ -22,7 +22,7 @@ Bevor du deine individuelle Dashboard-Ansicht einrichten kannst, sind nur ein pa
 [IMPORTANT]
 .Kennzahlen je nach plentyBI Edition verfügbar
 ====
-Manche Kennzahlen können nur angelegt werden, wenn du zuvor eine bestimmte plentyBI Edition gebucht hast. Öffne dazu das Menü *plentymarkets Logo (Start) » Mein Konto » Verträge*. Im Bereich *plentyBI Edition buchen* stehen dir plentyBI Editionen mit verschiedenen Umfängen zur Auswahl. Zusätzlich wird auch beim Anlegen einer neuen Kennzahl im Menü *Einrichtung » plentyBI » Kennzahlen* pro Kennzahl angezeigt, in welcher plentyBI Edition sie enthalten ist.
+Manche Kennzahlen können nur angelegt werden, wenn du zuvor eine bestimmte plentyBI Edition gebucht hast. Öffne dazu das Menü *plentymarkets Logo (Start) » Mein Konto » Verträge*. Klicke auf *Vertrag bearbeiten* und gehe zum Schritt *plentyBI Edition wählen*. Hier stehen dir plentyBI Editionen mit verschiedenen Umfängen zur Auswahl. Zusätzlich wird auch beim Anlegen einer neuen Kennzahl im Menü *Einrichtung » plentyBI » Kennzahlen* pro Kennzahl angezeigt, in welcher plentyBI Edition sie enthalten ist.
 ====
 
 Damit Daten im Dashboard angezeigt werden können, musst du zuerst entsprechende Kennzahlen anlegen.
