ADD user rights for action simple incoming items

--- a/docs/en-gb/modules/automation/pages/procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/procedures.adoc
@@ -2085,6 +2085,20 @@ The following sub-procedures are available for this procedure:
 
 Use the **Single incoming item** procedure to register single xref:stock-management:new-incoming-items.adoc#[incoming items] and directly allocate the item to a storage location or print a label for the item.
 
+[IMPORTANT]
+.User rights required
+====
+For the *Single incoming item* procedure to work correctly if a process containing this procedure is started by a user without admin rights, these users must be assigned the right listed below.
+====
+
+[discrete]
+==== Assigning rights for back end users
+
+:rights-purpose: execute the *Single incoming item* procedure
+:right-one: pass:quotes[*Items > Item > Variation > Supplier data > Show*]
+
+include::_includes:page$rights.adoc[]
+
 [.subhead]
 Work steps
 
