ADD more work to the stock chapter

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -61,23 +61,28 @@
 *** xref:artikel:artikelsuche.adoc[Artikel suchen]
 *** xref:artikel:detailansicht.adoc[Detailansicht: Gestaltung]
 *** xref:artikel:artikel-manuell-anlegen.adoc[Artikel und Varianten manuell anlegen]
-* xref:warenwirtschaft:warenwirtschaft.adoc[Warenwirtschaft]
-** xref:warenwirtschaft:lager-einrichten.adoc[Lager einrichten]
-** xref:warenwirtschaft:wareneingaenge-verwalten.adoc[Wareneingänge verwalten]
-** xref:warenwirtschaft:nachbestellungen-verwalten.adoc[Nachbestellungen verwalten]
+* xref:warenwirtschaft:warenwirtschaft.adoc[Waren]
+** xref:warenwirtschaft:preparation.adoc[Vorbereitende Einstellungen]
+*** xref:warenwirtschaft:lager-einrichten.adoc[Lager planen]
+*** xref:warenwirtschaft:praxisbeispiel-lager-einrichten.adoc[Praxisbeispiel: Lager planen]
+*** xref:warenwirtschaft:suppliers.adoc[Kontaktdaten für Lieferanten speichern]
+*** xref:warenwirtschaft:variations-track-stock.adoc[Varianten: Bestandsführung ermöglichen]
+** xref:warenwirtschaft:stock-management.adoc[Bestandsführung]
+*** xref:warenwirtschaft:wareneingaenge-verwalten.adoc[Ware einbuchen]
+*** xref:warenwirtschaft:umbuchungen-vornehmen.adoc[Ware umbuchen]
+*** xref:warenwirtschaft:waren-ausbuchen.adoc[Ware ausbuchen]
+*** xref:warenwirtschaft:warenbestaende-verwalten.adoc[Bestand überwachen]
+*** xref:warenwirtschaft:leitfaden-inventur.adoc[Leitfaden zur Inventur]
+*** xref:warenwirtschaft:inventur-vornehmen.adoc[Inventur vornehmen]
+*** xref:warenwirtschaft:praxisbeispiel-bestand-umbuchen.adoc[Praxisbeispiel: Bestand umbuchen/korrigieren/löschen]
+*** xref:warenwirtschaft:praxisbeispiel-warenbestand-sichern.adoc[Praxisbeispiel: Warenbestand täglich sichern]
+** xref:warenwirtschaft:nachbestellungen-verwalten.adoc[Nachbestellungen]
 *** xref:warenwirtschaft:nachbestellungen-vornehmen.adoc[Nachbestellungen vornehmen]
 *** xref:warenwirtschaft:rueckstandsliste-verwalten.adoc[Rückstandsliste nutzen]
 *** xref:warenwirtschaft:best-practices-nachbestellungen-exportieren.adoc[Praxisbeispiel: Nachbestellungen exportieren]
-** xref:warenwirtschaft:warenbestaende-verwalten.adoc[Warenbestände verwalten]
-** xref:warenwirtschaft:umbuchungen-vornehmen.adoc[Umbuchungen vornehmen]
-** xref:warenwirtschaft:mhd-charge-verwalten.adoc[MHD/Charge verwalten]
-** xref:warenwirtschaft:inventur-vornehmen.adoc[Inventur vornehmen]
-** xref:warenwirtschaft:leitfaden-inventur.adoc[Leitfaden zur Inventur]
-** xref:warenwirtschaft:waren-ausbuchen.adoc[Waren ausbuchen]
-** xref:warenwirtschaft:praxisbeispiele.adoc[Praxisbeispiele]
-*** xref:warenwirtschaft:praxisbeispiel-lager-einrichten.adoc[Praxisbeispiel: Lager einrichten]
-*** xref:warenwirtschaft:praxisbeispiel-bestand-umbuchen.adoc[Praxisbeispiel: Bestand umbuchen/korrigieren/löschen]
-*** xref:warenwirtschaft:praxisbeispiel-warenbestand-sichern.adoc[Praxisbeispiel: Warenbestand täglich sichern]
+** xref:warenwirtschaft:use-cases.adoc[Anwendungsfälle]
+*** xref:warenwirtschaft:mhd-charge-verwalten.adoc[Artikel mit MHD/Charge]
+*** xref:warenwirtschaft:properties.adoc[Lagerorte mit Eigenschaften charakterisieren]
 ** xref:warenwirtschaft:plentywarehouse.adoc[Die plentyWarehouse App (Beta)]
 *** xref:warenwirtschaft:installation-und-ersteinrichtung.adoc[Installation und Ersteinrichtung]
 *** xref:warenwirtschaft:artikel-und-lagerorte.adoc[Artikel und Lagerorte suchen]
