--- a/docs/de-de/modules/warenwirtschaft/pages/preparation.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/preparation.adoc
@@ -4,13 +4,7 @@
 :author: team-stock
 
 ////
-zuletzt bearbeitet 05.05.2022
+zuletzt bearbeitet 06.05.2022
 ////
 
-//ToDo - die Übersichtsseite in includes aufteilen und diese hier ausgeben
-
-Willst du deine Bestände mit plentymarkets verwalten? Bevor du Waren ein- und ausbuchen kannst, musst du zuerst ein paar vorbereitende Einstellungen vornehmen.
-
-* xref:warenwirtschaft:lager-einrichten.adoc#[Lager planen]
-* xref:warenwirtschaft:suppliers.adoc#[Kontaktdaten für Lieferanten speichern]
-* Varianten: Bestandsführung ermöglichen
+include::page$warenwirtschaft.adoc[tag=preparatory-settings]
